# ollama-lab

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: matches.txt  property_prompt.txt
rag/: RAG.py  README.md  main.py
tts/: README.md  main.py  tts.py
